// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the DevPulseTable renders correctly 1`] = `
<Fragment>
  <Table>
    <TableHeader
      headers={
        Array [
          "Week",
          "Quantity",
          "Quality",
          "Initiative",
          "Communication",
          "Professionalism",
          "Integration",
        ]
      }
    />
    <DevPulseRow
      averageRatings={false}
      key="weak-key-0"
      rating={Object {}}
    />
  </Table>
</Fragment>
`;

exports[`tests the DevPulseTable renders correctly 2`] = `
<Fragment>
  <Table>
    <TableHeader
      headers={
        Array [
          "Week",
          "Quantity",
          "Quality",
          "Initiative",
          "Communication",
          "Professionalism",
          "Integration",
        ]
      }
    />
  </Table>
  <Loader
    size=""
  />
</Fragment>
`;

exports[`tests the DevPulseTable renders correctly 3`] = `
<ErrorMessage
  customStyle={Object {}}
  message="There's currently no ratings for this fellow"
/>
`;
